feat: update matter-model and API docs
